Some alignments and layouts fixed!

--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: "Work Sans";
+    font-weight: 600;
 }
 
 
@@ -55,7 +57,7 @@ p{
 
     
 }
- 
+
 
 
 .nav-search-section-3{
@@ -273,11 +275,15 @@ video{
     margin-right: 158px;
 }
 
+
+
+
 .slider-1{
     width: 100%;
     height: 500px;
     display: flex;
     padding-bottom: 100px;
+    display: flex;
 
 div{
     padding-bottom: 20px;
@@ -286,13 +292,26 @@ div{
 .slider-text{
     width: 500px;
     height: 300px;
+    padding-top: 40px;
+
+    h2{
+        font-size: 36px;
+    }
+
+    p{
+        font-size: 18px;
+        font-weight: 400;
+    }
 }
 
 .slider-images{
-    width: 700px;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
 img{
-    width: 700px;
-    height: 410px;
+    width: 90%;
+    height: auto;
     border-radius: 10px;
     padding-top: 40px;
 }
@@ -308,6 +327,7 @@ img{
     height: 500px;
     display: flex;
     padding-bottom: 100px;
+    display: flex;
 
 div{
     padding-bottom: 20px;
@@ -316,13 +336,26 @@ div{
 .slider-text{
     width: 500px;
     height: 300px;
+    padding-top: 40px;
+
+    h2{
+        font-size: 36px;
+    }
+
+    p{
+        font-size: 18px;
+        font-weight: 400;
+    }
 }
 
 .slider-images{
-    width: 700px;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
 img{
-    width: 700px;
-    height: 410px;
+    width: 90%;
+    height: auto;
     border-radius: 10px;
     padding-top: 40px;
 }
@@ -330,11 +363,15 @@ img{
 
 }
 }
+
+
+
 .slider-3{
     width: 100%;
     height: 500px;
     display: flex;
     padding-bottom: 100px;
+    display: flex;
 
 div{
     padding-bottom: 20px;
@@ -343,13 +380,26 @@ div{
 .slider-text{
     width: 500px;
     height: 300px;
+    padding-top: 40px;
+
+    h2{
+        font-size: 36px;
+    }
+
+    p{
+        font-size: 18px;
+        font-weight: 400;
+    }
 }
 
 .slider-images{
-    width: 700px;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
 img{
-    width: 700px;
-    height: 410px;
+    width: 90%;
+    height: auto;
     border-radius: 10px;
     padding-top: 40px;
 }
@@ -364,6 +414,7 @@ img{
     height: 500px;
     display: flex;
     padding-bottom: 100px;
+    display: flex;
 
 div{
     padding-bottom: 20px;
@@ -372,14 +423,28 @@ div{
 .slider-text{
     width: 500px;
     height: 300px;
+    padding-top: 40px;
+
+    h2{
+        font-size: 36px;
+    }
+
+    p{
+        font-size: 18px;
+        font-weight: 400;
+    }
 }
 
 .slider-images{
-    width: 700px;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
 img{
-    width: 700px;
-    height: 410px;
+    width: 90%;
+    height: auto;
     border-radius: 10px;
+    padding-top: 40px;
 }
 
 
@@ -410,17 +475,85 @@ h1{
 
 .video-layers-container{
     width: 100%;
-    height: 350px;
-    display: flex;
+    height: auto;
+    /* display: flex; */
 
 }
 
 .video-layers{
-    width: 100%;
+    width: 88%;
     height: 100%;
     margin-right: 158px;
     margin-left: 158px;
     display: flex;
+    gap: 60px;
+
+}
+
+.video-layer-1{
+    width: 460px;
+    height: 260px;
+    background: url(/Images/openai-poster@2x.jpg);
+    background-size: cover;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+
+    img{
+        width: 110px;
+    }
+
+
+}
+
+.video-layer-2{
+    width: 144px;
+    height: 260px;
+    background: url(/Images/spotify-poster@2x.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+
+    img{
+        width: 110px;
+    }
+
+}
+
+.video-layer-3{
+    width: 144px;
+    height: 260px;
+    background: url(/Images/ibm-poster@2x.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+
+    img{
+        width: 110px;
+    }
+
+}
+
+.video-layer-4{
+    width: 144px;
+    height: 260px;
+    background: url(/Images/background-ari.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+
+    img{
+        width: 110px;
+    }
 
 }
 
@@ -457,6 +590,11 @@ h1{
     justify-content: center;
     align-items: center;
     font-size: 20px;
+
+    h3{
+        font-size: 18px;
+        font-weight: 400;
+    }
 }
 
 .section-3-cards{
@@ -472,8 +610,8 @@ h1{
 }
 .card{
     width: 265px;
-    height: 345px;
-    border: 1px solid black;
+    height: 350px;
+    border: 1px solid rgba(0, 0, 0, 0.211);
     border-radius: 10px;
     padding: 10px;
 
@@ -482,17 +620,30 @@ h1{
 .card-heading{
     width: 100%;
     height: 50px;
+    h1{
+        font-size: 27px;
+    }
+
+    
 
 }
 
 .card-subheading{
     width: 100%;
     height: 100px;
+    h3{
+    font-size: 15px;
+    font-weight: 400;
+    }
 }
 
 .card-list{
     width: 100%;
     line-height: 35px;
+    p{
+    font-size: 15px;
+    font-weight: 400;
+    }
 }
 
 .section--buttons{
@@ -532,6 +683,7 @@ button{
     color: #611f69;
     font-weight: bold;
     font-size: 15px;
+    background-color: #FFFFFF;
     border: 1px solid #611f69;
 }
 
@@ -591,7 +743,7 @@ p{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-weight: bold;
+    font-weight: 500;
 }
 }
 
@@ -644,7 +796,7 @@ div{
 .s-6-c{
     width: 270px;
     height: 400px;
-    background-color: rgb(239, 234, 234);
+    background-color: rgb(255, 255, 255);
     border-radius: 10px;
 
 
@@ -668,6 +820,10 @@ img{
     align-items: center;
     padding-left: 10px;
     padding-top: 10px;
+    h3{
+    font-size: 13px;
+    font-weight: 400;
+    }
 }
 
 }
@@ -676,17 +832,31 @@ img{
     font-size: 20px;
     font-weight: bold;
     padding: 0 10px 0 10px;
+    h2{
+    font-size: 25px;
+    font-weight: 600;
+    }
 }
 
 .promo-link-text{
     font-size: 15px;
     padding: 40PX 10px 0 10px;
     color: blue;
+    margin-top: 43px;
+    display: flex;
+    p{
+    font-size: 15px;
+    font-weight: 500;
+    }
+    img{
+        padding-left: 130px;
+    }
 }
 
 .section-6-captions{
     color: #9bafc4;
     padding-top: 20px;
+    margin-left: 28px;
 }
 
 /* section 7 */
@@ -793,6 +963,8 @@ button{
     
 p{
     margin-top: 15px;
+    font-size: 14px;
+    font-weight: 300;
 }
 h4{
     margin-top:  80px;
